[gd_scene load_steps=2 format=3 uid="uid://bxom0wstrn2u6"]

[ext_resource type="Script" uid="uid://bipg57gdcxwr1" path="res://src/upgrade/core/upgrade.gd" id="1_j3xiq"]

[node name="UpgradeUI" type="Control"]
layout_mode = 3
anchor_right = 0.068
anchor_bottom = 0.04
script = ExtResource("1_j3xiq")

[node name="ButtonUpgrade1" type="Button" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 8.0
offset_right = 48.0
offset_bottom = 48.0
text = "+Damage"

[node name="ButtonUpgrade2" type="Button" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 8.0
offset_right = 96.0
offset_bottom = 48.0
text = "+FireRate"

[node name="ButtonUpgrade3" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.2
anchor_bottom = 0.8
offset_left = 120.0
offset_top = 8.0
offset_right = -11.2
offset_bottom = -16.0
text = "+Range"
